--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <img class="google-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png">
         <form class="search-elements-container" action="https://www.google.com/search">
-            <input class="search-bar" type="text" name="q">
-            <input class="search" type="submit" value="Google Search">
-            <input class="lucky" type="submit" value="I'm Feeling Lucky">
+            <input class="search-bar" type="text" name="q" autocomplete="off" placeholder="  Search Google or type a URL" autofocus>
+            <input class="search" name="btnK" type="submit" value="Google Search">
+            <input class="lucky" name="btnI" type="submit" value="I'm Feeling Lucky">
         </form>
     </body>
 </html>
