--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img class="google-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png">
+        <ul>
+            <li><a href="image.html">Image Search</a></li>
+            <li><a href="advanced.html">Advanced Search</a></li>
+        </ul>
+        <img id="google-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png">
         <form class="search-elements-container" action="https://www.google.com/search">
-            <input class="search-bar" type="text" name="q" autocomplete="off" placeholder="  Search Google or type a URL" autofocus>
-            <input class="search" name="btnK" type="submit" value="Google Search">
-            <input class="lucky" name="btnI" type="submit" value="I'm Feeling Lucky">
+            <input id="search-bar" type="text" name="q" autocomplete="off" placeholder="  Search Google or type a URL" autofocus>
+            <input id="search" name="btnK" type="submit" value="Google Search">
+            <input id="lucky" name="btnI" type="submit" value="I'm Feeling Lucky">
         </form>
     </body>
 </html>
