--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <ul>
+        <ul class="nav-bar">
             <li><a href="image.html">Image Search</a></li>
             <li><a href="advanced.html">Advanced Search</a></li>
         </ul>
         <img id="google-img" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png">
         <form class="search-elements-container" action="https://www.google.com/search">
-            <input id="search-bar" type="text" name="q" autocomplete="off" placeholder="  Search Google or type a URL" autofocus>
+            <input id="search-bar" type="text" name="q" autocomplete="off" placeholder="Search Google or type a URL" autofocus>
             <input id="search" name="btnK" type="submit" value="Google Search">
             <input id="lucky" name="btnI" type="submit" value="I'm Feeling Lucky">
         </form>
