--- a/advanced.html
+++ b/advanced.html
@@ -6,30 +6,35 @@
     </head>
     <body>
         <img id="advanced-google-icon" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png">
-        <p class="Red header">
+
+        <p class="red-header">
             Advanced Search
         </p>
-        <p>
-            Find pages with...
-        <p>
-        <form>
-            <div  class="vertical-form-input">
-                all these words: 
-                <input>
-            </div> 
-            <div  class="vertical-form-input"> 
-                this exact word of phrase:
-                <input>
-            </div>
-            <div  class="vertical-form-input"> 
-                any of these words:
-                <input>
-            </div>
-            <div  class="vertical-form-input"> 
-                none of these words:
-                <input>
-            </div>
-            <button>Advanced Search</button>
-        </form>
+
+        <div class="form">
+            <p id="subtitle">
+                Find pages with...
+            <p>
+
+            <form>
+                <div  class="vertical-form-input">
+                    <p class="pretext">all these words:       </p>
+                    <input class="advance-form">
+                </div> 
+                <div  class="vertical-form-input"> 
+                    <p class="pretext">this exact word of phrase:</p>
+                    <input class="advance-form">
+                </div>
+                <div  class="vertical-form-input"> 
+                    <p class="pretext">any of these words:</p>
+                    <input class="advance-form">
+                </div>
+                <div  class="vertical-form-input"> 
+                    <p class="pretext">none of these words:</p>
+                    <input class="advance-form">
+                </div>
+                <input id="blue-submit" type="submit" value="Advanced Search">
+            </form>
+        </div>
     </body>
 </html>
