--- a/advanced.html
+++ b/advanced.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a class="right-corner" href="index.html">Google Search</a>
+
         <img id="advanced-google-icon" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png">
 
         <p class="red-header">
