--- a/image.html
+++ b/image.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <a class="right-corner" href="index.html">Google Search</a>
         <img id="google-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Google_Images_2015_logo.svg/2560px-Google_Images_2015_logo.svg.png">
         <form class="search-elements-container" action="https://images.google.com/images">
             <input id="search-bar" type="text" name="q" autocomplete="off" placeholder="Search Google Images" autofocus>
