Final(tentative) design changes to all 3 pages

--- a/image.html
+++ b/image.html
@@ -9,6 +9,7 @@
         <img id="google-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Google_Images_2015_logo.svg/2560px-Google_Images_2015_logo.svg.png">
         <form class="search-elements-container" action="https://images.google.com/images">
             <input id="search-bar" type="text" name="q" autocomplete="off" placeholder="Search Google Images" autofocus>
+            <input id="image-search" name="btnK" type="submit" value="Google Image Search">
         </form>
     </body>
 </html>
