Implement Advanced Search features

--- a/advanced.html
+++ b/advanced.html
@@ -18,22 +18,22 @@
                 Find pages with...
             <p>
 
-            <form>
+            <form action="https://www.google.com/search">
                 <div  class="vertical-form-input">
-                    <p class="pretext">all these words:       </p>
-                    <input class="advance-form">
+                    <p class="pretext">all these words:</p>
+                    <input class="advance-form" type="text" name="q">
                 </div> 
                 <div  class="vertical-form-input"> 
                     <p class="pretext">this exact word of phrase:</p>
-                    <input class="advance-form">
+                    <input class="advance-form" type="text" name="as_epq">
                 </div>
                 <div  class="vertical-form-input"> 
                     <p class="pretext">any of these words:</p>
-                    <input class="advance-form">
+                    <input class="advance-form" type="text" name="as_oq">
                 </div>
                 <div  class="vertical-form-input"> 
                     <p class="pretext">none of these words:</p>
-                    <input class="advance-form">
+                    <input class="advance-form" type="text" name="as_eq">
                 </div>
                 <input id="blue-submit" type="submit" value="Advanced Search">
             </form>
